* code clean up captcha and html template
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@43808 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-02-18 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* code clean up captcha and html template
+	
 2011-02-09 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* added captcha in subscription and edit form
 	* added the ability to search for user recursively
