* #12968: added captcha to infomail form. * added README file
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@44426 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-01 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* #12968: added captcha to infomail form.
+	* Added README file
+	
 2011-02-22 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* locallang file in xml-format
 	* optimizing localized gender: localized gender can be overwrite per TS
