Ticket #13264: moved typoscript to static template
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@52790 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2011-20-06 Ivan Kartolo <ivan.kartolo@dkd.de>
-	# #29676: fixes unreplaced marker
+	* #29676: fixes unreplaced marker
+	* #13264: moved typoscript to static template
 	
 2011-03-01 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* #12968: added captcha to infomail form.
