* #29677: fix captcha checking * compatibility to 4.6
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@53515 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2011-20-06 Ivan Kartolo <ivan.kartolo@dkd.de>
+2011-10-28 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* #29677: fix captcha checking
+	* compatibility to 4.6
+
+2011-10-06 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* #29676: fixes unreplaced marker
 	* #13264: moved typoscript to static template
 	
