--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-10-31 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* #29677: tweaking captcha in infomail
+
 2011-10-28 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* #29677: fix captcha checking
 	* compatibility to 4.6
