* Tweaking locallang for TYPO3 < 4.6.x
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/direct_mail_subscription/trunk@53597 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-11-01 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Tweaking locallang for TYPO3 < 4.6.x 
+	
 2011-10-31 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* #29677: tweaking captcha in infomail
 
