avoiding indexing and caching by search engine release 2.0.2
Change-Id: I9e769ef1e4fb23f9cf23e878b50d5eff1654222d

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-31 Ivan Kartolo <ivan@kartolo.de>
+	* avoiding indexing and caching by search engine
+
 2012-06-06 Ivan Kartolo <ivan@kartolo.de>
 	* using swiftmailer
 	* min TYPO3 4.5
